<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/fragment_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/zeroLoaderState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/search"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/search_using_team_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                app:lottie_fileName="search.json"
                app:lottie_loop="true"
                app:lottie_speed="1" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search"
            android:scrollbars="none">

            <RelativeLayout
                android:id="@+id/teamInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <FrameLayout
                    android:id="@+id/containerResults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/team"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recent_results"
                        android:textColor="#000"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:id="@+id/noEventFoundRS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/no_events_found"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:visibility="gone"
                        android:layout_marginTop="20dp"
                        android:paddingBottom="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/resultsRC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:layout_marginTop="20dp">

                    </androidx.recyclerview.widget.RecyclerView>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/containerFixture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/containerResults"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming_fixtures"
                        android:textColor="#000"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:id="@+id/noEventFoundFC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/no_events_found"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fixtureRC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:layout_marginTop="20dp">

                    </androidx.recyclerview.widget.RecyclerView>

                </FrameLayout>

                <include
                    android:id="@+id/team"
                    layout="@layout/card_teamsearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </ScrollView>


        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="18dp"
            android:iconifiedByDefault="false"
            android:queryHint="Enter any team name.." />

    </RelativeLayout>

    <data>
        <variable
            name="viewModel"
            type="com.abhishek.sportsstar.ui.viewmodel.SearchViewModel" />
    </data>


</layout>